// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`actions.ack.addContext > should return action 1`] = `
{
  "actionCreator": "my super action creator id",
  "data": {
    "foo": "bar",
  },
  "requestId": "123",
  "type": "ACK_ADD_CONTEXT",
}
`;

exports[`actions.ack.deleteACK > should return action 1`] = `
{
  "requestId": "123",
  "type": "ACK_DELETE",
}
`;

exports[`actions.ack.receiveMessage > should return action 1`] = `
{
  "requestId": "123",
  "type": "ACK_RECEIVE_MESSAGE",
}
`;
